--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,150 @@
- $primary-color: #444;
+@import 'config';
+// $colors: #eb9385, #99c0bc, #937782, #2d4249;
 
- body {
-     background: $primary-color;
-     color: #fff;
- }
+// Inputs
+// input[type='radio'] {
+//   display: none;
+// }
+
+// @for $i from 1 through 4 {
+//   input[type='radio']#section#{$i}:checked ~ nav > label[for='section#{$i}'] {
+//     background-color: white;
+//   }
+
+//   input[type='radio']#section#{$i}:checked ~ section:nth-of-type(#{$i}) {
+//     z-index: 1;
+//     top: 0;
+//     transition: top 0.5s ease-in-out;
+//     transition-delay: 0s;
+//   }
+
+//   input[type='radio']#section#{$i}:checked ~ .cover {
+//    background-color: nth($colors, $i);
+//   }
+// }
+
+// Nav
+.nav {
+  position: fixed;
+  z-index: 2;
+  right: 30px;
+  top: 50%;
+  transform: translateY(-50%);
+
+  //   &__item {
+  //     width: 12px;
+  //     height: 12px;
+  //     display: block;
+  //     margin: 12px auto;
+  //     border: solid 2px white;
+  //     border-radius: 50%;
+  //     cursor: pointer;
+
+  //     &:hover {
+  //       background-color: white;
+  //     }
+  //   }
+}
+
+// Sections
+// section {
+//   height: 100%;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   position: absolute;
+//   top: 100%;
+//   right: 0;
+//   left: 0;
+//   transition-delay: 0.5s;
+// }
+
+// @for $i from 1 through 4 {
+//   section:nth-of-type(#{$i}) {
+//     background: nth($colors, $i);
+//   }
+// }
+
+// Fix the white-space
+// .cover {
+//   position: fixed;
+//   top: 0;
+//   right: 0;
+//   bottom: 0;
+//   left: 0;
+//   z-index: -1;
+// }
+
+* {
+  box-sizing: border-box;
+}
+
+// Base
+// html,
+body {
+  //   overflow: hidden;
+  @include background;
+  background: $primary-color;
+  color: white;
+  height: 100%;
+  margin: 0;
+  font: 100% "Carter One", cursive;
+  line-height: 1.5;
+}
+//headings
+h1,
+h2,
+h3 {
+  margin: 0;
+  font-weight: 400;
+
+  &.lg-heading {
+    font-size: 6rem;
+  }
+
+  &.sm-heading {
+    margin-bottom: 2rem;
+    padding: 0.2rem 1rem;
+    background: rgba(lighten($primary-color, 2), 0.5);
+  }
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+header {
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+}
+
+.text-secondary {
+  color: $secondary-color;
+}
+
+main {
+  padding: 4rem;
+  height: 100%;
+
+  .icons {
+    margin-top: 1rem;
+
+    a {
+      padding: 0.4rem;
+
+      &:hover {
+        color: $secondary-color;
+        @include easeOut();
+      }
+    }
+  }
+
+  &#home {
+    overflow: hidden;
+    h1 {
+      margin-top: 10vh;
+    }
+  }
+}
