--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,8 @@
 $primary-color: #444;
-$secondary-color: #99c0bc;
+$secondary-color: #00ff9f;
+$third-color: #00b8ff;
 $show-home-image: true;
-$home-image: url(../img/canalst.jpg);
+$home-image: url(../img/background.jpg);
 $background-opacity: 0.5;
 
 @mixin easeOut {
@@ -26,6 +27,15 @@ $background-opacity: 0.5;
           background: rgba($primary-color, $background-opacity);
         }
       }
+    }
+  }
+
+  //set text color
+  @function set-text-color($color) {
+    @if (lightness($color) > 40) {
+      @return #000;
+    } @else {
+      @return #fff;
     }
   }
   
