--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,8 +27,8 @@ h3 {
   }
   &.sm-heading {
     margin-bottom: 2rem;
-    padding: 0.2rem 1rem;
-    background: rgba(lighten($primary-color, 2), 0.3);
+    padding: 0.2rem;
+    background: rgba(darken($primary-color, 2), 0.4);
     font-family: 'OCR A';
   }
 }
@@ -98,12 +98,55 @@ main {
   }
   
   .job {
-    background: lighten($primary-color, 5);
+    background: rgba(lighten($primary-color, 2), 0.3);
     padding: 0.5rem;
     border-bottom: $secondary-color 5px solid;
   }
 }
 
+
+//work/projects
+.projects {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+
+  img {
+    width: 100%;
+    border: 3px #fff solid;
+
+    &:hover {
+      opacity: 0.5;
+      border-color: $secondary-color;
+      @include easeOut;
+    }
+  }
+}
+
+//BUtton styles
+.btn {
+  display:inline-block;
+  padding: 0.5rem 1rem;
+  border:0;
+  margin-bottom: 0.3rem;
+  &:hover {
+    background:$secondary-color;
+    color: set-text-color
+    ($secondary-color);
+  }
+}
+
+.btn-dark {
+  @extend .btn;
+  background: darken($primary-color, 50);
+  color: #fff;
+}
+
+.btn-light {
+  @extend .btn;
+  background: lighten($primary-color, 50);
+  color: #333;
+}
 #main-footer {
   text-align:center;
   padding: 1rem;
