corrected misspelled img file

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -91,7 +91,7 @@
       .portrait {
         width: 200px;
         height: 200px;
-        background: url('../img/selfie2.jpg');
+        background: url('../img/selfie2.jpeg');
         // background-attachment: fixed;
         // background-size: cover;
         border-radius: 40%;
