still trying to get img to load

--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@
     .menu-branding .portrait {
       width: 200px;
       height: 200px;
-      background: url("../selfie2.jpeg");
+      background: url("../img/selfie2.jpeg");
       border-radius: 40%;
       border: solid 3px #00ff9f; }
   .menu .nav-item {
