editing menu portrait

--- a/css/main.css
+++ b/css/main.css
@@ -53,8 +53,10 @@
     .menu-branding.show {
       transform: translate3d(0, 0, 0); }
     .menu-branding .portrait {
-      width: 220px;
-      height: 225px;
+      /* width: 220px;
+      height: 225px; */
+      display: flex;
+      flex: .5;
       background: url("../img/selfie2.jpeg");
       border-radius: 40%;
       border: solid 3px #00ff9f; }
