--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -89,10 +89,8 @@
       }
   
       .portrait {
-        // width: 200px;
-        // height: 200px;
-        display: flex;
-        flex: 1;
+        width: 200px;
+        height: 200px;
         background: url('../img/selfie2.jpeg');
         // background-attachment: fixed;
         // background-size: cover;
