--- a/css/main.css
+++ b/css/main.css
@@ -274,8 +274,8 @@ main {
     height: 25vh;
     transform: translate3d(100%, 0, 0); }
     .menu-branding .portrait {
-      background: url("../img/smallport.jpg");
-      width: 150px;
+      background: url("../img/selfie2.jpeg");
+      width: 100px;
       height: 150px; }
   .about-info {
     grid-template-areas: 'bioimage'
