--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -92,7 +92,7 @@
         width: 65px;
         height: 200px;
         background: url('../img/selfie2.jpeg');
-        background-attachment: fixed;
+        background-attachment: center;
         // background-size: cover;
         border-radius: 40%;
         border: solid 3px $secondary-color;
