--- a/css/main.css
+++ b/css/main.css
@@ -53,8 +53,8 @@
     .menu-branding.show {
       transform: translate3d(0, 0, 0); }
     .menu-branding .portrait {
-      width: 200px;
-      height: 200px;
+      width: 65px;
+      height: 225px;
       background: url("../img/selfie2.jpeg");
       border-radius: 40%;
       border: solid 3px #00ff9f; }
@@ -274,8 +274,8 @@ main {
     height: 25vh;
     transform: translate3d(100%, 0, 0); }
     .menu-branding .portrait {
-      background: url("../img/smallport.jpg");
-      width: 150px;
+      background: url("../img/selfie2.jpeg");
+      width: 100px;
       height: 150px; }
   .about-info {
     grid-template-areas: 'bioimage'
