--- a/css/_config.scss
+++ b/css/_config.scss
@@ -1,10 +1,11 @@
-$primary-color: #444;
+$primary-color: #222;
 $secondary-color: #00ff9f;
-$third-color: #00b8ff;
+$third-color: #00f8f8;
 $forth-color: #d600ff;
 $floralwhite: rgb(255, 250, 240);
+$blak: #111111;
 $background-opacity: 0.3;
 
 @mixin easeOut {
-    transition: all 0.5s ease-out;
-  }
+  transition: all 0.5s ease-out;
+}
