--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,204 @@
+.button {
+  background-color: #00ff9f;
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.textbox {
+  background: white;
+  border: 1px solid #6600ff;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 5px 3px #6600ff;
+          box-shadow: 0 0 5px 3px #6600ff;
+  color: #666;
+  outline: none;
+  height: 23px;
+  width: 275px;
+}
+
+#title {
+  color: white;
+  position: absolute;
+  bottom: -10px;
+  left: 10px;
+}
+
+#instruction {
+  color: white;
+  position: absolute;
+  bottom: 55px;
+  left: 10px;
+}
+
+#image {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  bottom: 50%;
+}
+
+#soundcloud {
+  position: absolute;
+  bottom: 40px;
+  left: 320px;
+  z-index: 2;
+}
+
+#artisttitle {
+  color: white;
+  position: absolute;
+  top: 40px;
+  left: 170px;
+  font-size: 50%;
+}
+
+#songtitle {
+  color: white;
+  position: absolute;
+  top: 0px;
+  left: 170px;
+  font-size: 70%;
+}
+
+#URLbox {
+  z-index: 2;
+  position: absolute;
+  bottom: px;
+  left: 10px;
+  width: 300px;
+}
+
+#button_play {
+  z-index: 5;
+  position: relative;
+  bottom: 47px;
+  left: 33.3%;
+}
+
+#button_pause {
+  z-index: 5;
+  position: relative;
+  bottom: 86px;
+  left: 33.3%;
+}
+
+#homelink {
+  position: absolute;
+  bottom: 40px;
+  right: 20px;
+  color: white;
+  opacity: 0.5;
+}
+
+#credit {
+  position: absolute;
+  bottom: 0px;
+  right: 20px;
+  z-index: 3;
+  color: white;
+  opacity: 0.5;
+}
+
+#scrubber {
+  z-index: 2;
+  position: relative;
+  bottom: 110px;
+  left: 33.3vw;
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 300px;
+  height: 10px;
+  background: #00f8f8;
+  border: none;
+  border-radius: 3px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: none;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: #6600ff;
+  margin-top: -4px;
+}
+
+input[type=range]:focus {
+  outline: none;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #ccc;
+}
+
+#audioCurrentTime {
+  color: white;
+  position: relative;
+  bottom: 147px;
+  left: 66.6%;
+  font-size: 70%;
+}
+
+.link {
+  color: white;
+}
+
+.keys {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 100px 100px 100px;
+      grid-template-columns: 100px 100px 100px;
+  min-height: 60vh;
+  margin-top: 3rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.key {
+  text-align: center;
+  width: 4rem;
+  height: 4rem;
+  border: 0.4rem solid #111111;
+  border-radius: 0.5rem;
+  margin: 0rem;
+  font-size: 1rem;
+  -webkit-transition: all 0.07s ease;
+  transition: all 0.07s ease;
+  color: white;
+}
+
+.playing {
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+  -webkit-box-shadow: 0 0 1rem #00f8f8;
+          box-shadow: 0 0 1rem #00f8f8;
+}
+
+kbd {
+  display: block;
+  font-size: 2rem;
+}
+
+.sound {
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  color: #d600ff;
+}
+
 .menu-btn {
   position: fixed;
   z-index: 3;
@@ -72,7 +273,7 @@
 .menu-nav {
   margin: 0;
   padding: 0;
-  background: #373737;
+  background: #141414;
   list-style: none;
   -webkit-transform: translate3d(0, -100%, 0);
           transform: translate3d(0, -100%, 0);
@@ -83,29 +284,6 @@
 .menu-nav.show {
   -webkit-transform: translate3d(0, 0, 0);
           transform: translate3d(0, 0, 0);
-}
-
-.menu-branding {
-  background: #444;
-  -webkit-transform: translate3d(0, 100%, 0);
-          transform: translate3d(0, 100%, 0);
-  -webkit-transition: all 0.5s ease-out;
-  transition: all 0.5s ease-out;
-}
-
-.menu-branding.show {
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-}
-
-.menu-branding .portrait {
-  width: 200px;
-  height: 250px;
-  background: url(../img/blknwht.jpeg);
-  background-repeat: no-repeat;
-  background-size: 200px 250px;
-  border-radius: 40%;
-  border: solid 3px #00ff9f;
 }
 
 .menu .nav-item {
@@ -132,14 +310,14 @@
   text-transform: uppercase;
   padding: 1rem 0;
   font-weight: 300;
-  color: set-text-color(#444);
+  color: set-text-color(floralwhite);
   text-decoration: none;
   -webkit-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
 }
 
 .menu .nav-link:hover {
-  color: #00b8ff;
+  color: #00f8f8;
 }
 
 .nav-item:nth-child(1) {
@@ -169,7 +347,7 @@
 }
 
 body {
-  background: rgba(0, 0, 0, 0.9);
+  background: #111111;
   font-family: "OCR A", Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -178,7 +356,7 @@ body {
 }
 
 .text-third {
-  color: #00b8ff;
+  color: #00f8f8;
 }
 
 .text-forth {
@@ -190,12 +368,12 @@ body {
   height: 100vh;
   width: 100%;
   background-image: url("../img/warmth.jpg");
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   display: block;
-  filter: blur(10px);
-  -webkit-filter: blur(10px);
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
   -webkit-transition: all 1000ms;
   transition: all 1000ms;
 }
@@ -210,18 +388,11 @@ body {
   -webkit-filter: blur(2px);
 }
 
-.context {
-  max-width: 960px;
-  margin: auto;
-  overflow: hidden;
-  padding: 4rem 1rem;
-}
-
 .splashContent {
   color: floralwhite;
   position: absolute;
   z-index: 1;
-  top: 10%;
+  top: 5%;
   left: 50%;
   margin-top: 105px;
   margin-left: -145px;
@@ -243,8 +414,10 @@ body {
 }
 
 .splashContent .text {
-  font-size: 1.1rem;
-  line-height: 1.5;
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: bold;
+  line-height: 1.2;
   margin-top: 1rem;
 }
 
@@ -284,18 +457,17 @@ header h1 {
   height: 200px;
   overflow: hidden;
   position: relative;
-  margin: 0;
+  margin: 2;
   -webkit-transition: all 0.5s ease-in-out 0.1s;
   transition: all 0.5s ease-in-out 0.1s;
 }
 
 .tab:hover {
   width: 450px;
-  opacity: 1;
   border-right: #d600ff 15px solid;
 }
 
-/* before and after psuedo elements- 
+/* /// before and after psuedo elements- 
   to add content through css*/
 .tab:hover .social a:before {
   margin-left: -100px;
@@ -306,12 +478,14 @@ header h1 {
 }
 
 .tab .content {
+  color: #222;
   background: floralwhite;
   width: 360px;
   height: 200px;
   margin-left: 80px;
   padding: 5px 0 0 15px;
   position: relative;
+  word-wrap: normal;
 }
 
 .tab .content h1 {
@@ -321,8 +495,8 @@ header h1 {
 
 .tab .content p {
   font-size: 0.85rem;
-  line-height: 1.4rem;
-  padding-right: 5px;
+  line-height: 1rem;
+  padding-right: 25px;
 }
 
 .social a:after,
@@ -412,9 +586,25 @@ header h1 {
   margin: auto;
 }
 
+.mainCol {
+  background: #111111;
+}
+
+#sectionA {
+  background: #111111;
+  border: 1px solid #00f8f8;
+  width: 500px;
+  margin: auto;
+  margin-bottom: 1rem;
+}
+
+.vz-wrapper {
+  height: 100vh;
+}
+
 .bg-light {
   background: floralwhite;
-  color: #333;
+  color: #111111;
   /* box-shadow: 30px 0px 40px rgba(0, 0, 0, 0.1),
       -30px 0px 40px rgba(0, 0, 0, 0.1);*/
 }
@@ -425,10 +615,52 @@ header h1 {
 }
 
 footer {
-  padding: 2.2rem;
+  margin-top: 1px;
+  padding: .9rem;
 }
 
 footer p {
-  margin: 0;
+  margin-top: 2;
+}
+
+@media (max-width: 950px) {
+  .container {
+    width: 95%;
+  }
+  .tab {
+    display: block;
+    width: 100%;
+    border-bottom: 3px #00ff9f solid;
+  }
+  .accordion {
+    display: block;
+    min-width: 450px;
+    height: auto;
+  }
+  .tab .content {
+    width: 85%;
+    word-wrap: normal;
+  }
+  .tab:hover {
+    width: 100%;
+  }
+}
+
+@media (max-width: 680px) {
+  .showcase::after {
+    filter: none;
+    -webkit-filter: none;
+  }
+  .container {
+    width: 95%;
+  }
+  .accordion {
+    width: 100%;
+    min-width: 350px;
+  }
+  .tab .content {
+    width: 85%;
+    word-wrap: normal;
+  }
 }
 /*# sourceMappingURL=main.css.map */
