--- a/css/main.css
+++ b/css/main.css
@@ -1,160 +1,3 @@
-.button {
-  background-color: #00ff9f;
-  border: none;
-  color: white;
-  padding: 5px 10px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-
-.textbox {
-  background: white;
-  border: 1px solid #6600ff;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 0 5px 3px #6600ff;
-          box-shadow: 0 0 5px 3px #6600ff;
-  color: #666;
-  outline: none;
-  height: 23px;
-  width: 275px;
-}
-
-#title {
-  color: white;
-  position: absolute;
-  bottom: -10px;
-  left: 10px;
-}
-
-#instruction {
-  color: white;
-  position: absolute;
-  bottom: 55px;
-  left: 10px;
-}
-
-#image {
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  bottom: 50%;
-}
-
-#soundcloud {
-  position: absolute;
-  bottom: 40px;
-  left: 320px;
-  z-index: 2;
-}
-
-#artisttitle {
-  color: white;
-  position: absolute;
-  top: 40px;
-  left: 170px;
-  font-size: 50%;
-}
-
-#songtitle {
-  color: white;
-  position: absolute;
-  top: 0px;
-  left: 170px;
-  font-size: 70%;
-}
-
-#URLbox {
-  z-index: 2;
-  position: absolute;
-  bottom: px;
-  left: 10px;
-  width: 300px;
-}
-
-#button_play {
-  z-index: 5;
-  position: relative;
-  bottom: 47px;
-  left: 33.3%;
-}
-
-#button_pause {
-  z-index: 5;
-  position: relative;
-  bottom: 86px;
-  left: 33.3%;
-}
-
-#homelink {
-  position: absolute;
-  bottom: 40px;
-  right: 20px;
-  color: white;
-  opacity: 0.5;
-}
-
-#credit {
-  position: absolute;
-  bottom: 0px;
-  right: 20px;
-  z-index: 3;
-  color: white;
-  opacity: 0.5;
-}
-
-#scrubber {
-  z-index: 2;
-  position: relative;
-  bottom: 110px;
-  left: 33.3vw;
-}
-
-input[type=range] {
-  -webkit-appearance: none;
-}
-
-input[type=range]::-webkit-slider-runnable-track {
-  width: 300px;
-  height: 10px;
-  background: #00f8f8;
-  border: none;
-  border-radius: 3px;
-}
-
-input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  border: none;
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-  background: #6600ff;
-  margin-top: -4px;
-}
-
-input[type=range]:focus {
-  outline: none;
-}
-
-input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #ccc;
-}
-
-#audioCurrentTime {
-  color: white;
-  position: relative;
-  bottom: 147px;
-  left: 66.6%;
-  font-size: 70%;
-}
-
-.link {
-  color: white;
-}
-
 .keys {
   display: -ms-grid;
   display: grid;
@@ -165,6 +8,22 @@ input[type=range]:focus::-webkit-slider-runnable-track {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.keys:before {
+  top: 0;
+  left: 0;
+  width: 500px;
+  background: #30ebf1;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  pointer-events: none;
+}
+
+.keys:hover:before {
+  left: -50%;
+  -webkit-transform: skewX(-5deg);
+          transform: skewX(-5deg);
 }
 
 .key {
@@ -363,6 +222,13 @@ body {
   color: #d600ff;
 }
 
+.tubeContainer {
+  width: 40%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .showcase::after {
   content: "";
   height: 100vh;
@@ -533,7 +399,7 @@ header h1 {
 
 .skills a:before,
 .skills a:after {
-  content: "\f425";
+  content: "\f200";
 }
 
 .skills a:after {
@@ -590,12 +456,29 @@ header h1 {
   background: #111111;
 }
 
-#sectionA {
+.box1 {
   background: #111111;
-  border: 1px solid #00f8f8;
+  border: 2px solid #00f8f8;
   width: 500px;
   margin: auto;
   margin-bottom: 1rem;
+}
+
+.box1:before {
+  content: '';
+  top: 0;
+  left: 0;
+  width: 500px;
+  background: black;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  pointer-events: none;
+}
+
+.box1:hover:before {
+  left: -50%;
+  -webkit-transform: skewX(-5deg);
+          transform: skewX(-5deg);
 }
 
 .vz-wrapper {
@@ -610,13 +493,17 @@ header h1 {
 }
 
 .bg-dark {
-  background: #333;
+  background: transparent;
   color: floralwhite;
 }
 
 footer {
-  margin-top: 1px;
-  padding: .9rem;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
 }
 
 footer p {
