--- a/css/main.scss
+++ b/css/main.scss
@@ -5,11 +5,9 @@
   padding: 0;
   border: 0;
 }
-
 body {
   background: $blak;
   font-family: "OCR A", Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
-  
 }
 // ////////////////////////////// TEXT COLORS
 .text-secondary {
@@ -20,6 +18,10 @@ body {
 }
 .text-forth {
   color: $forth-color;
+}
+.tubeContainer {
+  width: 40%;
+  justify-content: center;
 }
 ////////////////////////////////////////// LANDING SECTION
 .showcase::after {
@@ -34,7 +36,6 @@ body {
   filter: blur(5px);
   -webkit-filter: blur(5px);
   transition: all 1000ms;
-  
 }
 .showcase:hover::after {
   filter: blur(0px);
@@ -56,7 +57,6 @@ body {
   height: 350px;
   text-align: center;
   transition: all 1000ms;
-  
 }
 .splashContent .logo {
   height: 180px;
@@ -174,7 +174,7 @@ header h1 {
 }
 .skills a:before,
 .skills a:after {
-  content: "\f425";
+  content: "\f200";
 }
 .skills a:after {
   background-color: transparent;
@@ -221,20 +221,44 @@ header h1 {
   background: $blak;
 }
 // ////////////////////////////////////////////////////// LAUNCH PAD
-#sectionA {
+// #sectionA {
+//   background: $blak;
+//   border: 2px solid $third-color;
+//   width: 500px;
+//   margin: auto;
+//   margin-bottom: 1rem;
+//   // box-shadow: 0px 10px 40px rgba(0, 0, 0, 1.1),
+//   //   0px 0px 40px rgba(0, 0, 0, 1.1);
+// }
+.box1 {
   background: $blak;
-  border: 1px solid $third-color;
+  border: 2px solid $third-color;
   width: 500px;
   margin: auto;
   margin-bottom: 1rem;
-  // box-shadow: 0px 10px 40px rgba(0, 0, 0, 1.1),
-  //   0px 0px 40px rgba(0, 0, 0, 1.1); 
+  // box-shadow: 0px 20px 50px #1bcfe7;
+  //   0px 0px 40px rgba(0, 0, 0, 1.1);
+}
+
+.box1:before {
+  content: '';
+  top:0;
+  left:0;
+  width: 500px;
+  background: rgba(0,0,0,1);
+  transition: 0.5s;
+  pointer-events: none;
+}
+
+.box1:hover:before{
+  left: -50%;
+  transform: skewX(-5deg);
 }
 
 .vz-wrapper {
   height: 100vh;
   // width: 500px;
-  }
+}
 
 // /////////////////////////////////////////////////////
 .bg-light {
@@ -245,14 +269,17 @@ header h1 {
 }
 
 .bg-dark {
-  background: #333;
+  background: transparent;
   color: $floralwhite;
 }
 
 footer {
-  margin-top: 1px;
-  padding: .9rem;
-  
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
 }
 
 footer p {
